--- a/style/style.scss
+++ b/style/style.scss
@@ -82,7 +82,7 @@ section{
         }
         
         p.todo-text{
-            width: 50%;
+            width: 70%;
         }
         p.todo-time{
             width: 30%;
@@ -103,8 +103,24 @@ section{
             background-color: rgb(235, 63, 63);
         }
     }
-  
-   
+
+}
+
+div.sort{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0rem;
+
+    button{
+        cursor: pointer;
+        background-color: rgb(182, 28, 131);
+        color: white;
+        border: none;
+        padding:0.25rem 0.5rem;
+        font-size: 1.75rem;
+    }
+
 }
 
 .done{
