--- a/style/style.css
+++ b/style/style.css
@@ -108,7 +108,7 @@ section div.todo p {
 }
 
 section div.todo p.todo-text {
-  width: 50%;
+  width: 70%;
 }
 
 section div.todo p.todo-time {
@@ -130,6 +130,28 @@ section div.todo button.complete {
 
 section div.todo button.trash {
   background-color: #eb3f3f;
+}
+
+div.sort {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 1rem 0rem;
+}
+
+div.sort button {
+  cursor: pointer;
+  background-color: #b61c83;
+  color: white;
+  border: none;
+  padding: 0.25rem 0.5rem;
+  font-size: 1.75rem;
 }
 
 .done {
